Test/git-issues/git-issue-864y.dfy.expect
git-issue-864y.dfy(6,9): Error: duplicate name of top-level declaration: A
1 resolution/type errors detected in git-issue-864y.dfy
